@@ -2,7 +2,7 @@
  * Copyright (C) 1998 Alexander Larsson
  *
  * Chronogram objects support
- * Copyright (C) 2000 Cyrille Chepelov 
+ * Copyright (C) 2000 Cyrille Chepelov <chepelov@calixo.net>
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -213,22 +213,33 @@ parse_clevent(const gchar *events, real rise, real fall)
   
   return clel;
 }
-  
 
-inline static int
+inline static int 
+__forward_checksum_i(int chk, int value) 
+{
+  return (0xFFFFFFFF & (((chk << 1) | ((chk & 0x80000000)?1:0)) ^ value));
+}
+
+inline static int 
+__forward_checksum_r(int chk, real value) 
+{
+  return __forward_checksum_i(chk,*((int *)(&value)));
+}
+
+static int
 __chksum(const char *str, real rise, real fall, real time_end)
 {
   const char *p = str;
   int i = 1;
-  if (!p) return -1;
 
-  i = 0xFFFFFFFF & (int)(i * rise*100 + rise * 100);
-  i = 0xFFFFFFFF & (int)(i * 314.16*fall + 314.16*fall);
-  i = 0xFFFFFFFF & (int)(i * 271.3*time_end + 271.3*time_end);
+  i = __forward_checksum_r(i,rise); 
+  i = __forward_checksum_r(i,fall); 
+  i = __forward_checksum_r(i,time_end); 
   
+  if (!p) return i;
+
   while (*p) {
-    i = (0xFFFFFFF) & (i + (*p) + (i * (signed)(*p)));
-    if (!i) i++;
+    i = __forward_checksum_i(i,*p);
     p++;
   }
   /* printf("chksum[%s] = %d\n",str,i); */
@@ -241,6 +252,7 @@ reparse_clevent(const gchar *events, CLEventList **lst,
 {
   int newsum;
 
+  /* XXX: it might be better to simply drop this checksumming ? */
   newsum = __chksum(events,rise,fall,time_end);
   if ((newsum == *chksum) && (*lst)) return;
 
